manifests/loki-ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
    - host: loki.9melon.ru
      http:    
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-loki
                port:
                  number: 3100
