manifests/ms-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #tls:
  #- hosts:
  #    - 9melon.ru
  #  secretName: kuber-2021-tls
  rules:
    - host: hello.local
      http: &http_rules       
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          # - path: /*
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: frontend
          #       port:
          #         number: 80
    - host: 9melon.ru
      http: *http_rules
